--- a/proje7.css
+++ b/proje7.css
@@ -23,6 +23,10 @@ body{
     cursor: pointer;
     background: #724ae8;
     border-radius: 50%;
+    transition: all 0.2s ease;
+}
+.show-chatbot .chatbot-toggler{
+    transform: rotate(90deg);
 }
 .chatbot-toggler span{
     position: absolute;
@@ -45,8 +49,10 @@ body{
     overflow: hidden;
     background: #fff;
     border-radius: 15px;
+    transform-origin: bottom right;
     box-shadow: 0 0 128px 0 rgba(0,0,0,0.1),
                 0 32px 64px -48px rgba(0,0,0,0.5);
+    transition: all 0.1s ease;
 }
 .show-chatbot .chatbot{
     transform: scale(1);
@@ -75,7 +81,7 @@ body{
 .chatbot .chatbox{
     height: 450px;
     overflow-y: auto;
-    padding: 30px 20px 70px;
+    padding: 30px 20px 100px;
 }
 .chatbox .chat{
     display: flex;
@@ -98,10 +104,15 @@ body{
 .chatbox .chat p{
     color: #fff;
     max-width: 75%;
+    white-space: pre-wrap;
     font-size: 0.95rem;
     padding: 12px 16px;
     border-radius: 10px 10px 0 10px;
     background: #724ae8;
+}
+.chatbox .chat p.error{
+    color: #721c24;
+    background: #f8d7da;
 }
 .chatbox .incoming p{
     color: #000;
@@ -123,6 +134,7 @@ body{
     width: 100%;
     border: none;
     outline: none;
+    max-height: 180px;
     font-size: 0.95rem;
     resize: none;
     padding: 16px 15px 16px 0;
